// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TitleBar Should display correctly with action item as: Button 1`] = `
<DocumentFragment>
  .emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-9 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-9 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

.emotion-2 {
  margin-right: 16px;
}

@media screen {
  .emotion-8 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-8 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-8 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-8 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-8 {
    display: block;
  }
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 48px;
  min-width: 80px;
  padding: 12px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: #0a68c1;
  border-radius: 8px;
  color: #ffffff;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-6 svg {
  width: 24px;
  height: 24px;
}

.emotion-6 svg {
  fill: #ffffff;
}

.emotion-6:hover:not(:disabled) {
  background-color: #02509b;
}

.emotion-6:active:not(:disabled) {
  background-color: #01396e;
}

.emotion-6:disabled {
  background-color: #e4e4e4;
  color: #c0c0c0;
}

.emotion-6:disabled svg {
  fill: #c0c0c0;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-3::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3642857142857143em + 1.2px);
}

.emotion-3::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-9"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
    <div
      class="emotion-8"
    >
      <div
        class="emotion-7"
      >
        <button
          class="emotion-6"
          data-testid="button"
          type="button"
        >
          <div
            class="emotion-5"
          >
            <div
              class="emotion-4"
            >
              <span
                class="emotion-3"
              >
                Default button
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar Should display correctly with action item as: Link 1`] = `
<DocumentFragment>
  .emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-7 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-7 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

.emotion-2 {
  margin-right: 16px;
}

@media screen {
  .emotion-6 {
    display: none;
  }
}

@media screen and (min-width:480px) {
  .emotion-6 {
    display: block;
  }
}

@media screen and (min-width:768px) {
  .emotion-6 {
    display: block;
  }
}

@media screen and (min-width:1024px) {
  .emotion-6 {
    display: block;
  }
}

@media screen and (min-width:1440px) {
  .emotion-6 {
    display: block;
  }
}

.emotion-5 {
  display: inline-block;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  color: #0a68c1;
}

.emotion-5 svg {
  fill: #0a68c1;
}

.emotion-5:hover:not(:disabled) {
  color: #02509b;
}

.emotion-5:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-5:active:not(:disabled) {
  color: #01396e;
}

.emotion-5:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-5:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-5:visited:not(:disabled) svg {
  fill: #7547a3;
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.emotion-3 {
  margin: 0;
  padding: 1px 0;
  display: inline-block;
  display: block;
}

<div
    class="emotion-7"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
    <div
      class="emotion-6"
    >
      <a
        class="emotion-5"
        href="/"
      >
        <span
          class="emotion-4"
        >
          <span
            class="emotion-3"
          >
            Link
          </span>
        </span>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly only stylePreset for the heading 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly only typographyPreset for the heading 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:479px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should apply correctly the props and overrides 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 4px 8px;
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:479px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 18px;
    line-height: 1.1111111111111112;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2055555555555556em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2680555555555556em;
  }
}

@media screen and (min-width:480px) and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 20px;
    line-height: 1.2;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.25em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.3125em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 24px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: calc(-0.2333333333333334em + 1px);
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: calc(-0.2958333333333334em + 1px);
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 28px;
    line-height: 1.1428571428571428;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.22142857142857142em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2839285714285714em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a68c1;
}

.emotion-0 svg {
  fill: #0a68c1;
}

.emotion-0:hover:not(:disabled) {
  color: #02509b;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509b;
}

.emotion-0:active:not(:disabled) {
  color: #01396e;
}

.emotion-0:active:not(:disabled) svg {
  fill: #01396e;
}

.emotion-0:visited:not(:disabled) {
  color: #7547a3;
}

.emotion-0:visited:not(:disabled) svg {
  fill: #7547a3;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h1 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h1
          class="emotion-0"
        >
          Test title of title bar
        </h1>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h2 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h2
          class="emotion-0"
        >
          Test title of title bar
        </h2>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h3 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h4 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h4
          class="emotion-0"
        >
          Test title of title bar
        </h4>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h5 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h5
          class="emotion-0"
        >
          Test title of title bar
        </h5>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly as renders with h6 size 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h6
          class="emotion-0"
        >
          Test title of title bar
        </h6>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TitleBar should display correctly with default styles and given title 1`] = `
<DocumentFragment>
  .emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: transparent;
  border-style: solid;
  border-color: #e4e4e4;
  border-width: 0 0 1px 0;
}

@media screen and (max-width:1023px) {
  .emotion-3 {
    padding: 12px 16px;
  }
}

@media screen and (min-width:1024px) {
  .emotion-3 {
    padding: 16px 24px;
  }
}

.emotion-1 {
  padding: 1px 0px;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 32px;
    line-height: 1.125;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.21250000000000002em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.275em;
  }
}

@media screen and (min-width:768px) and (max-width:1023px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 40px;
    line-height: 1.1;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20000000000000007em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.26250000000000007em;
  }
}

@media screen and (min-width:1024px) {
  .emotion-1 {
    font-family: "Source Serif Pro",serif;
    font-size: 48px;
    line-height: 1.1666666666666667;
    font-weight: 600;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-1::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.2333333333333334em;
  }

  .emotion-1::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.2958333333333334em;
  }
}

.emotion-0 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #0a0a0a;
}

.emotion-0 svg {
  fill: #0a0a0a;
}

<div
    class="emotion-3"
  >
    <div
      class="emotion-2"
    >
      <section
        class="emotion-1"
      >
        <h3
          class="emotion-0"
        >
          Test title of title bar
        </h3>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
